WexGit/Wex_DX/force-app/main/default/objects/URL__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>This value can be used as a key in a key/value pair</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This value can be used as a key in a key/value pair</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>