WexGit/Wex_DX/force-app/main/default/objects/URL__c/fields/Open_Page_in_New_window__c.field-meta.xml
<CustomField>
    <fullName>Open_Page_in_New_window__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to say if the link should open a new window vs. launching a new sub-tab in the Service Console</description>
    <inlineHelpText>Checkbox to say if the link should open a new window vs. launching a new sub-tab in the Service Console</inlineHelpText>
    <label>Open Page in New window</label>
    <type>Checkbox</type>
</CustomField>