WexGit/Wex_DX/force-app/main/default/objects/URL__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>The URL of the link</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The URL of the link</inlineHelpText>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>