WexGit/Wex_DX/force-app/main/default/objects/URL__c/fields/URL_Category__c.field-meta.xml
<CustomField>
    <fullName>URL_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>