WexGit/Wex_DX/force-app/main/default/objects/URL__c/fields/URL_CSS_Class__c.field-meta.xml
<CustomField>
    <fullName>URL_CSS_Class__c</fullName>
    <description>The CSS Class(es) for the url</description>
    <encryptionScheme>None</encryptionScheme>
    <label>URL CSS Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>