WexGit/Wex_DX/force-app/main/default/objects/URL__c/fields/URL_Group__c.field-meta.xml
<CustomField>
    <fullName>URL_Group__c</fullName>
    <description>The grouping for the URL. This determines where on the page the URL is listed. New ones can not be added without the page layout of the PKB being adjusted</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The grouping for the URL. This determines where on the page the URL is listed. New ones can not be added without the page layout of the PKB being adjusted</inlineHelpText>
    <label>URL Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>