WexGit/Wex_DX/force-app/main/default/objects/URL__c/fields/URL_Image_Path__c.field-meta.xml
<CustomField>
    <fullName>URL_Image_Path__c</fullName>
    <description>This is a path to an image. Depending on the developer and how the use it, it can likely be a absolute or relative URL to the image.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If the URL is an image, instead of text, the location of the URL image</inlineHelpText>
    <label>URL Image Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>