WexGit/Wex_DX/force-app/main/default/objects/URL__c/fields/URL_Label__c.field-meta.xml
<CustomField>
    <fullName>URL_Label__c</fullName>
    <description>The text that appears on the page for the URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The text that appears on the page for the URL</inlineHelpText>
    <label>URL Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>