WexGit/Wex_DX/force-app/main/default/objects/URL__c/fields/URL_Target__c.field-meta.xml
<CustomField>
    <fullName>URL_Target__c</fullName>
    <defaultValue>&apos;_self&apos;</defaultValue>
    <description>Target of the URL link</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Target of the URL link</inlineHelpText>
    <label>URL Target</label>
    <length>50</length>
    <type>Text</type>
</CustomField>